<resources>
    <string name="app_name">Inventory App Stage 2</string>
    <string name="empty_view_title_text">There is no book yet...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">View/Edit Book</string>
    <string name="book_name">Book Name</string>
    <string name="hint_book_name">The Lord of the Rings</string>
    <string name="quantity">Quantity</string>
    <string name="list_quantity">Quantity:&#160;</string> <!-- &#160; non-breakable whitespace -->
    <string name="minus_quantity_button">-</string>
    <string name="plus_quantity_button">+</string>
    <string name="price">Price</string>
    <string name="list_price">Price:&#160;</string> <!-- &#160; non-breakable whitespace -->
    <string name="hint_book_price">22.50</string>
    <string name="unit_book_price">$</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="hint_supplier_name">HarperCollins</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="hint_supplier_phone">1-212-207-7000</string>
    <string name="call_button">Call Supplier</string>
    <string name="editor_empty_value_warning">All fields must be filled!</string>
    <string name="editor_insert_book_successful">Book saved!</string>
    <string name="editor_insert_book_failed">Error with saving book!</string>
    <string name="editor_update_book_successful">Book updated!</string>
    <string name="editor_update_book_failed">Error with updating book!</string>
    <string name="editor_delete_book_successful">Book deleted!</string>
    <string name="editor_delete_book_failed">Error with deleting book!</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="sale_button">Sale</string>
    <string name="quantity_warning_message">Quantity can\'t be less than 0!</string>
</resources>
